<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/call_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/call_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text=""
            style="@style/fontStyleWhiteMedium" />

        <TextView
            android:id="@+id/call_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/call_time_textview"
            android:text=""
            style="@style/fontStyleWhiteMedium" />

        <TextView
            android:id="@+id/call_duration_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text=""
            style="@style/fontStyleWhiteMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/conf_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_conf_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peer_name"
                style="@style/fontStyleWhiteMedium" />

            <TextView
                android:id="@+id/num_conf_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peer_num"
                style="@style/fontStyleWhiteMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/time_conf_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/time"
            style="@style/fontStyleWhiteMedium" />

        <TextView
            android:id="@+id/duration_conf_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text=""
            style="@style/fontStyleWhiteMedium" />
    </RelativeLayout>

</RelativeLayout>